# qcal

./: Cargo.toml  readme.txt
.github/workflows/: release.yml
src/: main.rs
