[package]
name = "qcal"
version = "0.1.0"
edition = "2021"

[dependencies]
meval = "0.2"

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"